--- a/Ejs_DOM/Ej13/main.html
+++ b/Ejs_DOM/Ej13/main.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ej11</title>
+    <title>Ej13</title>
     <script src="main.js"></script>
 </head>
 <body>
     <div>
-
+        <p>Parrafo 1</p>
+        <p>Parrafo 2</p>
+        <p>Parrafo 3</p>
     </div>
 
-    <button onclick="crear()">Crear</button>
-    <button onclick="borrar()">Borrar</button>
+    <button onclick="mover()">Mover</button>
+
+    <div>
+        
+    </div>
 </body>
 </html>
