--- a/Ejs_DOM/Ej14/main.html
+++ b/Ejs_DOM/Ej14/main.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ej11</title>
+    <title>Ej14</title>
     <script src="main.js"></script>
 </head>
 <body>
+    
     <div>
-
+        <h1>Hola Mundo</h1><br/>
     </div>
-
-    <button onclick="crear()">Crear</button>
-    <button onclick="borrar()">Borrar</button>
+    
+    <button onclick="add()">Añadir</button>
 </body>
 </html>
