--- a/pruebasJuego/main.html
+++ b/pruebasJuego/main.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego</title>
+    <title>Document</title>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
-<script src="main.js"></script>
-<body id="body">
-    <script>
-        juego();    
-    </script> 
-    
+<body>
+    <h1 id="texto">Hola</h1>
 </body>
 </html>
