--- a/Ejs/tabla/main.html
+++ b/Ejs/tabla/main.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Document</title>
     <script src="main.js"></script>
 </head>
-<body id="body">
-
-    <script>
-      juego();    
-    </script> 
-    
-   
+<body>
+    <script src="main.js">
+        
+    </script>
 </body>
 </html>
