--- a/JUEGOV2/main.html
+++ b/JUEGOV2/main.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
-<body id="body">
+<body>
 
+  
+
+  <div id="lienzo">
     <script>
       juego();    
     </script> 
+  </div>
+   
     
    
 </body>
