--- a/Ejercicio DWEC Cubos/index.html
+++ b/Ejercicio DWEC Cubos/index.html
@@ -27,6 +27,13 @@
 			<p id="autor">Diseño realizado por </p>
 		</div>
 
+		<dialog id="miDi">
+			<table>
+				<tr><h1 id="left">IZQUIERDA</h1></tr>
+				<tr><h1 id="right">DERECHA</h1></tr>
+			</table>
+		</dialog>
+
 		<script src="main.js"></script>
 	</body>
 </html>
