--- a/cliente-servidor/pruebas/main.html
+++ b/cliente-servidor/pruebas/main.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.js">
-    
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
