--- a/trablaEditable/main.html
+++ b/trablaEditable/main.html
@@ -9,20 +9,24 @@
     
     <table>
         <tr id="fija">
-            <th>Producto</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th>Total</th>
+            <th id="producto" class="info">Producto</th>
+            <th id="precio" class="info">Precio</th>
+            <th id="cantidad" class="info">Cantidad</th>
+            <th id="total" class="info">Total</th>
         </tr>
-        <tr>
+        <tr class="eliminable">
             <td>Portatil</td>
             <td class="precio">30</td>
             <td class="cantidad">2</td>
-            <td class="total"></td>
+            <th class="total"></th>
         </tr>
     </table>
-    <button id="agregar">Agregar Fila</button>
-    <button id="eliminar">Eliminar Fila</button>
+    <div>
+        <button id="agregar">Agregar Columna</button>
+        <button id="eliminar">Eliminar ultima Columna</button>
+        <button id="fondo">Cambiar color fondo</button>
+        <button id="letra">Cambiar color letra</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
