--- a/JUEGOV2/main.html
+++ b/JUEGOV2/main.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Juego</title>
-    <link rel="stylesheet" href="main.css">
-    
-</head>
-<body>
-
-  <script src="main.js"></script>
-
-  <script>
-    juego();    
-  </script> 
-    
-   
-</body>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <script src="main.js"></script>
+    <img id="disparo" src="./marciano.png" alt="" style="position: absolute; visibility: hidden; top:-10px;"/>
+    <script>
+      juego();
+    </script>
+  </body>
 </html>
