--- a/trablaEditable/main.html
+++ b/trablaEditable/main.html
@@ -6,13 +6,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
     <table>
         <tr id="fija">
-            <th id="producto" class="info">Producto</th>
-            <th id="precio" class="info">Precio</th>
-            <th id="cantidad" class="info">Cantidad</th>
-            <th id="total" class="info">Total</th>
+            <th id="producto">Producto</th>
+            <th id="precio">Precio</th>
+            <th id="cantidad">Cantidad</th>
+            <th id="total">Total</th>
         </tr>
         <tr class="eliminable">
             <td>Portatil</td>
