--- a/trablaEditable/main.html
+++ b/trablaEditable/main.html
@@ -21,8 +21,8 @@
         </tr>
     </table>
     <div>
-        <button id="agregar">Agregar Columna</button>
-        <button id="eliminar">Eliminar ultima Columna</button>
+        <button id="agregar">Agregar Fila</button>
+        <button id="eliminar">Eliminar ultima Fila</button>
         <button id="fondo">Cambiar color fondo</button>
         <button id="letra">Cambiar color letra</button>
     </div>
