--- a/JUEGOV2/main.html
+++ b/JUEGOV2/main.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script src="main.js"></script>
-    <img id="disparo" src="./marciano.png" alt="" style="position: absolute; visibility: hidden; top:-10px;"/>
+    <img id="disparo" src="./ghast.png" alt="" style="position: absolute; visibility: hidden; top:-10px;"/>
     <script>
       juego();
     </script>
